# wigglystuff

./: .gitignore  404.html  AGENTS.md  BUILD_GUIDE.md  BUILD_SUMMARY.md  BUILD_SYSTEM_PLAN.md  BUILD_SYSTEM_SIMPLE.md  BUILD_SYSTEM_USAGE.md  CHANGELOG.md  Makefile  RADIX_BUTTON_ANALYSIS.md  RADIX_MIGRATION_PLAN.md  README.md  SIMPLE_BUILD_APPROACH.md  agents.md  conductor.json  dag_layout_crossings.html  demo.py  index.html  index.md  llms.txt  mkdocs.yml  notebook.ipynb  notebook.py  objects.inv  package-lock.json  package.json  pyproject.toml  readme.md  setup.py  sitemap.xml  skills-lock.json  tailwind.config.js  wandb-demo.py  zensical.toml
.conductor/: settings.toml
demos/: altairwidget.py  annotation.py  apidoc.py  asyncflow.py  asyncflow_mvp.py  attractor.py  beziercurve.py  celltour.py  chartmultiselect.py  chartpuck.py  chartselect.py  circular_slider.py  colorpicker.py  copytoclipboard.py  cube_widget.py  curve-filling.py  curve_clifford.py  curve_normal.py  curveeditor.py  diffviewer.py  dimensions.py  drivertour.py  edgedraw.py  envconfig.py  esm_widget.py  excalidraw.py  forecast_chart.py  frame_player.py  gamepad.py  graphwidget.py  greedy_search_pucks.py  griddraw.py  hoverzoom.py  html.py  htmlwidget.py  hypercube.py  keystroke.py  latex_formula.py  liveedit.py  manim_web.py  (+37 more)
docs/: demos.md  index.html  index.md  llms.txt
examples/: d3-bezier.html  dimensions.py  fashion-mnist-parallel-coords.py  latex-tangle.html  pair-up.py  zooming.py
js/: edgedraw.js
llm/: index.md
mkdocs/: index.md  llms.txt
reference/: altair-widget.md  api-doc.md  cell-tour.md  chart-multi-select.md  chart-puck.md  chart-select.md  color-picker.md  copy-to-clipboard.md  diff-viewer.md  edge-draw.md  env-config.md  gamepad.md  hover-zoom.md  html-refresh.md  image-refresh.md  index.html  index.md  keystroke.md  matrix.md  module-tree.md  neo4j-widget.md  nested-table.md  paint.md  parallel-coords.md  play-slider.md  progress-bar.md  pulsar-chart.md  scatter-widget.md  slider2d.md  sortable-list.md  spline-draw.md  talk.md  tangle.md  text-compare.md  three-widget.md  treemap.md  utils.md  wandb-chart.md  webcam-capture.md
scripts/: build.js  copy_docs_md.py  export_marimo_demos.py  png_to_webp.py  post_zensical.py
search/: search_index.json
tests/: conftest.py  grid_draw_geometry.test.mjs  test_altair_widget.py  test_annotation.py  test_async_flow.py  test_bezier_curve.py  test_chart_puck.py  test_chart_select.py  test_circular_slider.py  test_cube_widget.py  test_curve_editor.py  test_edgedraw.py  test_env_config.py  test_env_config_export.py  test_excalidraw.py  test_graph_widget.py  test_grid_draw.py  test_imports.py  test_live_edit.py  test_liveedit_demo.py  test_matrix.py  test_scatter_log.py  test_scatter_widget.py  test_sortable_list.py  test_sound_spectrograph.py  test_tangle_latex.py  test_text_compare.py  test_tree_widgets.py  test_widget_dag.py
wigglystuff/: __init__.py  _marimo_notice.py  _tree_utils.py  altair_widget.py  annotation.py  (+58 more)
(+3746 files in other folders)
